pushgateway/pushgateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pushgateway
  namespace: kube-system
  labels:
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    kubernetes.io/name: "pushgateway"
spec:
  type: NodePort
  ports:
  - port: 9091
    targetPort: 9091
    nodePort: 30007
  selector:
    k8s-app: pushgateway 

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-pushgateway
  namespace: kube-system
spec:
  rules:
  - host: pushgateway.k8s.dapp.com
    http:
      paths:
      - backend:
          serviceName: pushgateway
          servicePort: 9091
